# dncdbg

./: .clang-tidy  .gitattributes  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  Directory.Build.props  LICENSE  README.md  compileoptions.cmake  detectplatform.cmake  sanitizer-ignorelist.txt
cmake/: clrdefinitions.cmake  compileoptions.cmake  configurepaths.cmake  fetchdeps.cmake  platformdefinitions.cmake
docs/: build_linux.md  build_macos.md  build_windows.md  dap_status.md  inputting_text.md  pseudo_variables.md  types_usage.md  usage_vscode_linux.md  usage_vscode_unix.md  usage_vscode_windows.md
src/: CMakeLists.txt  buildinfo.cpp  buildinfo.h  internaltests.cpp  main.cpp  version.h
src/debugger/: breakpoint_break.cpp  breakpoint_break.h  breakpoint_entry.cpp  breakpoint_entry.h  breakpoint_hotreload.cpp  breakpoint_hotreload.h  breakpoints.cpp  breakpoints.h  breakpoints_exception.cpp  breakpoints_exception.h  breakpoints_func.cpp  breakpoints_func.h  breakpoints_line.cpp  breakpoints_line.h  breakpointutils.cpp  breakpointutils.h  callbacksqueue.cpp  callbacksqueue.h  dbgshim.h  evalhelpers.cpp  evalhelpers.h  evalstackmachine.cpp  evalstackmachine.h  evaluator.cpp  evaluator.h  evalutils.cpp  evalutils.h  evalwaiter.cpp  evalwaiter.h  frames.cpp  frames.h  hotreloadhelpers.cpp  hotreloadhelpers.h  managedcallback.cpp  managedcallback.h  manageddebugger.cpp  manageddebugger.h  stepper_async.cpp  stepper_async.h  stepper_simple.cpp  (+11 more)
src/debugger/breakpoints/: breakpoint_break.cpp  breakpoint_break.h  breakpoint_entry.cpp  breakpoint_entry.h  breakpoints.cpp  breakpoints.h  breakpoints_exception.cpp  breakpoints_exception.h  breakpoints_func.cpp  breakpoints_func.h  breakpoints_function.cpp  breakpoints_function.h  breakpoints_line.cpp  breakpoints_line.h  breakpoints_source.cpp  breakpoints_source.h  breakpointutils.cpp  breakpointutils.h
src/debugger/evaluation/primitivetypes/: binaryoperators.cpp  cast.cpp  types.cpp  types.h  unaryoperators.cpp
src/debugger/primitivetypes/: binaryoperators.cpp  types.cpp  types.h  unaryoperators.cpp
src/debugger/steppers/: stepper_async.cpp  stepper_async.h  stepper_simple.cpp  stepper_simple.h  steppers.cpp  steppers.h
src/debuginfo/: async_info.cpp  async_info.h  debuginfo.cpp  debuginfo.h  debuginfo_sources.cpp  debuginfo_sources.h  debugsources.cpp  debugsources.h  modules.cpp  modules.h  modules_sources.cpp  modules_sources.h  pdb.h  pdbreader.cpp  pdbreader.h  sourcefilemap.cpp  sourcefilemap.h
src/expressionparser/: helpers.cpp  helpers.h  parser.cpp  parser.h
src/interfaces/: idebugger.h  iprotocol.h  types.cpp  types.h
src/managed/: Evaluation.cs  ManagedPart.csproj  StackMachine.cs  SymbolReader.cs  Utils.cs  interop.cpp  interop.h
src/metadata/: async_info.cpp  async_info.h  attributes.cpp  attributes.h  corhelpers.h  jmc.cpp  jmc.h  modules.cpp  modules.h  modules_app_update.cpp  modules_app_update.h  modules_sources.cpp  modules_sources.h  sigparse.cpp  sigparse.h  typeprinter.cpp  typeprinter.h
src/protocol/: dap.cpp  dap.h  dapio.cpp  dapio.h  escaped_string.cpp  escaped_string.h
src/protocols/: cliprotocol.cpp  cliprotocol.h  completions.h  escaped_string.cpp  escaped_string.h  miprotocol.cpp  miprotocol.h  protocol_utils.cpp  protocol_utils.h  sourcestorage.cpp  sourcestorage.h  tokenizer.cpp  tokenizer.h  tty.h  vscodeprotocol.cpp  vscodeprotocol.h
src/types/: protocol.cpp  protocol.h  types.cpp  types.h
src/unittests/: Catch2.cpp  compile_test.h  escaped_string_test.cpp  ioredirect_test.cpp  iosystem_test.cpp  span_test.cpp  streams_test.cpp  string_view_test.cpp
src/utils/: dbgshim.h  dynlibs.h  dynlibs_unix.cpp  dynlibs_win32.cpp  err_utils.cpp  filesystem.cpp  filesystem.h  filesystem_unix.cpp  filesystem_unix.h  filesystem_win32.cpp  filesystem_win32.h  hresult.h  interop_unix.cpp  interop_win32.cpp  ioredirect.cpp  ioredirect.h  ioredirect_unix.cpp  ioredirect_win32.cpp  iosystem.h  iosystem_internal.h  iosystem_unix.cpp  iosystem_unix.h  iosystem_win32.cpp  iosystem_win32.h  kqueue.cpp  kqueue.h  limits.h  literal_string.h  logger.cpp  logger.h  memorybuffer.h  memorybuffer_unix.cpp  memorybuffer_win32.cpp  platform.h  platform_unix.cpp  platform_win32.cpp  platformtag.h  print.cpp  print.h  remote_console.cpp  (+18 more)
test-suite/: README.md  run_tests.ps1  run_tests.sh
test-suite/DAPTestAsyncLambdaEvaluate/: Program.cs
test-suite/DAPTestAsyncStepping/: Program.cs
test-suite/DAPTestAttach/: Program.cs
test-suite/DAPTestBreak/: Program.cs
test-suite/DAPTestBreakpoint/: Program.cs
test-suite/DAPTestBreakpointWithoutStop/: Program.cs
test-suite/DAPTestDisconnect/: Program.cs
test-suite/DAPTestEnum/: Program.cs
test-suite/DAPTestEnv/: Program.cs
test-suite/DAPTestEvalArraysIndexers/: Program.cs
test-suite/DAPTestEvalNotEnglish/: Program.cs
test-suite/DAPTestEvaluate/: Program.cs
test-suite/DAPTestExceptionBreakpoint/: Program.cs
test-suite/DAPTestExitCode/: Program.cs
test-suite/DAPTestExtensionMethods/: Program.cs
test-suite/DAPTestFuncBreak/: Program.cs
test-suite/DAPTestGeneric/: Program.cs
test-suite/DAPTestNoJMCAsyncStepping/: Program.cs
test-suite/DAPTestNoJMCBreakpoint/: Program.cs
test-suite/DAPTestNoJMCExceptionBreakpoint/: Program.cs
test-suite/DAPTestNoJMCNoFilterStepping/: Program.cs
test-suite/DAPTestPause/: Program.cs
test-suite/DAPTestSizeof/: DAPTestSizeof.csproj  Program.cs
test-suite/DAPTestSrcBreakpointResolve/: Program.cs
test-suite/DAPTestStepping/: DAPTestStepping.csproj  Program.cs
test-suite/DAPTestThreads/: Program.cs
test-suite/DAPTestUnhandledException/: Program.cs
test-suite/DAPTestVariables/: Program.cs
test-suite/DAPTest中文目录/: 中文文件名.cs
test-suite/DNCDbgTest/: Assert.cs  Breakpoint.cs  Checkpoint.cs  ControlInfo.cs  ControlPart.cs  ControlScript.cs  DebuggerClient.cs  Exception.cs  Label.cs  Logger.cs  Script.cs
test-suite/DbgTest/: Assert.cs  Breakpoint.cs  Checkpoint.cs  ControlInfo.cs  ControlPart.cs  ControlScript.cs  DbgTest.csproj  DebuggerClient.cs  Exception.cs  Label.cs  Logger.cs  Script.cs  (+1 more)
(+107 files in other folders)
